src/test/ui/malformed/malformed-plugin-1.stderr
error: malformed `plugin` attribute input
  --> $DIR/malformed-plugin-1.rs:2:1
   |
LL | #![plugin]
   | ^^^^^^^^^^ help: must be of the form: `#[plugin(name|name(args))]`

warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/issues/29597
  --> $DIR/malformed-plugin-1.rs:2:1
   |
LL | #![plugin]
   | ^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to previous error

