src/test/ui/malformed/malformed-plugin-1.rs
#![feature(plugin)]
#![plugin] //~ ERROR attribute must be of the form

fn main() {}
